--- a/app/src/main/res/layout/activity_my_products.xml
+++ b/app/src/main/res/layout/activity_my_products.xml
@@ -8,14 +8,6 @@
     android:layout_height="match_parent"
     tools:context=".MyProductsActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/sellerProductsRecyclerView"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_marginTop="40dp"
-        app:layout_constraintTop_toBottomOf="@+id/sellerProductsTitle2"
-        tools:layout_editor_absoluteX="0dp" />
-
     <TextView
         android:id="@+id/sellerProductsTitle2"
         android:layout_width="match_parent"
@@ -32,4 +24,18 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <FrameLayout
+        android:id="@+id/my_products_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
+
+        <androidx.recyclerview.widget.RecyclerView
+            android:id="@+id/sellerProductsRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_marginTop="40dp"
+            android:paddingBottom="60dp" />
+    </FrameLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
