--- a/app/src/main/res/layout/activity_spending_chart.xml
+++ b/app/src/main/res/layout/activity_spending_chart.xml
@@ -154,29 +154,10 @@
     </ScrollView>
 
 
-<!--    <FrameLayout-->
-<!--        android:id="@+id/frameLayout"-->
-<!--        android:layout_width="match_parent"-->
-<!--        android:layout_height="match_parent"-->
-<!--        app:layout_constraintTop_toTopOf="parent"-->
-<!--        tools:context=".BottomNavFragment" />-->
-
-        <com.google.android.material.bottomnavigation.BottomNavigationView
-            android:id="@+id/bottomNavigationView"
-            android:layout_width="match_parent"
-            android:layout_height="75dp"
-            android:background="#FFFFFF"
-            app:elevation="8dp"
-            app:itemBackground="@color/main_theme_color"
-            app:itemIconTint="@color/white"
-            app:itemPaddingBottom="20dp"
-            app:itemPaddingTop="20dp"
-            app:itemTextColor="@color/white"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.5"
-            app:layout_constraintStart_toStartOf="parent"
-            app:menu="@menu/bottom_nav_menu" />
+    <FrameLayout
+        android:id="@+id/spending_chart_fragment_container"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent" />
 
     <TextView
         android:id="@+id/spendingLimitTitle"
