--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -191,7 +191,7 @@
             app:layout_constraintTop_toBottomOf="@+id/categorySpinner" />
 
         <Button
-            android:id="@+id/button"
+            android:id="@+id/addProductButton"
             android:layout_width="154dp"
             android:layout_height="51dp"
             android:layout_marginTop="16dp"
