--- a/app/src/main/res/layout/seller_product_card_item.xml
+++ b/app/src/main/res/layout/seller_product_card_item.xml
@@ -27,7 +27,7 @@
                 app:layout_constraintHorizontal_bias="0.061"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@android:drawable/ic_menu_camera" />
+                app:srcCompat="@drawable/ic_menu_camera" />
 
             <TextView
                 android:id="@+id/sellerProductNameTextview"
