--- a/app/src/main/res/layout/fragment_add_products.xml
+++ b/app/src/main/res/layout/fragment_add_products.xml
@@ -230,7 +230,7 @@
     <!--        app:menu="@menu/bottom_nav_menu" />-->
 
     <TextView
-        android:id="@+id/addProductTitleText"
+        android:id="@+id/profile_title"
         android:layout_width="match_parent"
         android:layout_height="40dp"
         android:background="@color/main_theme_color"
