--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,6 +10,7 @@
     <color name="white">#FFFFFFFF</color>
     <color name="lighter_gray">#F1F1F1</color>
     <color name="darker_gray">#A0A0A0</color>
+    <color name="darker_gray_but_better">#D6D6D6</color>
     <color name="even_darker_gray">#A3A3A3</color>
     <color name="bright_green">#08EC0B</color>
 </resources>
