--- a/app/src/main/res/layout/activity_spending_chart.xml
+++ b/app/src/main/res/layout/activity_spending_chart.xml
@@ -59,14 +59,29 @@
 
             <Spinner
                 android:id="@+id/monthSpinner"
-                android:layout_width="379dp"
+                android:layout_width="200dp"
                 android:layout_height="49dp"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="16dp"
                 android:background="@drawable/custom_input"
                 android:entries="@array/month_group"
                 android:paddingStart="12dp"
                 android:paddingEnd="12dp"
                 app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.087"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <Spinner
+                android:id="@+id/yearSpinner"
+                android:layout_width="170dp"
+                android:layout_height="49dp"
+                android:layout_marginTop="16dp"
+                android:background="@drawable/custom_input"
+                android:entries="@array/year_group"
+                android:paddingStart="12dp"
+                android:paddingEnd="12dp"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.933"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
@@ -148,6 +163,8 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/setSpendingLimitTextview" />
+
+
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
