--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -5,30 +5,63 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <ImageView
-        android:id="@+id/imageView2"
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHeight_percent="0.4"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/backgrounds/scenic" />
-
-    <androidx.constraintlayout.widget.ConstraintLayout
+    <RelativeLayout
+        android:id="@+id/login_welcome_section"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginStart="1dp"
-        android:layout_marginTop="1dp"
-        android:layout_marginEnd="1dp"
-        android:layout_marginBottom="1dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHeight_percent="0.35"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent">
+
+        <ImageView
+            android:id="@+id/imageView2"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            tools:srcCompat="@tools:sample/backgrounds/scenic" />
+
+        <TextView
+            android:id="@+id/textView14"
+            android:layout_width="409dp"
+            android:layout_height="67dp"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_alignParentBottom="true"
+            android:layout_marginStart="2dp"
+            android:layout_marginTop="111dp"
+            android:layout_marginEnd="0dp"
+            android:layout_marginBottom="78dp"
+            android:gravity="center"
+            android:text="@string/sign_in_to_continue"
+            android:textAlignment="center"
+            android:textAppearance="@style/black_outline_text"
+            android:textColor="@color/white"
+            android:textSize="18sp" />
+
+        <TextView
+            android:id="@+id/textView12"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentStart="true"
+            android:layout_alignParentTop="true"
+            android:layout_alignParentEnd="true"
+            android:layout_marginStart="0dp"
+            android:layout_marginTop="68dp"
+            android:layout_marginEnd="0dp"
+            android:text="@string/welcome"
+            android:textAlignment="center"
+            android:textAppearance="@style/black_outline_text"
+            android:textColor="@color/white"
+            android:textSize="25sp" />
+    </RelativeLayout>
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/login_form_section"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        app:layout_constraintVertical_bias="1.0">
+        app:layout_constraintTop_toBottomOf="@+id/login_welcome_section">
 
         <EditText
             android:id="@+id/login_username_edit"
@@ -75,26 +108,15 @@
             app:layout_constraintTop_toBottomOf="@+id/login_username_edit"
             app:layout_constraintWidth_percent="0.6" />
 
-        <View
-            android:id="@+id/divider2"
-            android:layout_width="407dp"
-            android:layout_height="1dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />
-
         <Button
             android:id="@+id/login_button"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:text="@string/login"
-            app:layout_constraintBottom_toTopOf="@+id/divider4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider3"
+            app:layout_constraintTop_toBottomOf="@+id/forgot_password_clickable_text"
             app:layout_constraintWidth_percent="0.5" />
 
         <CheckBox
@@ -103,11 +125,10 @@
             android:layout_height="wrap_content"
             android:text="@string/remember_me"
             android:textSize="12sp"
-            app:layout_constraintBottom_toTopOf="@+id/divider3"
             app:layout_constraintEnd_toStartOf="@+id/forgot_password_clickable_text"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider2" />
+            app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />
 
         <TextView
             android:id="@+id/forgot_password_clickable_text"
@@ -120,24 +141,13 @@
             android:minHeight="48dp"
             android:text="@string/forgot_password"
             android:textAlignment="center"
+            android:textAppearance="@style/clickable_text"
             app:flow_horizontalAlign="center"
             app:flow_verticalAlign="center"
-            app:layout_constraintBottom_toTopOf="@+id/divider3"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/remember_me_checkbox"
-            app:layout_constraintTop_toBottomOf="@+id/divider2" />
-
-        <View
-            android:id="@+id/divider3"
-            android:layout_width="match_parent"
-            android:layout_height="1dp"
-            android:layout_marginTop="48dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="1.0"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider2" />
+            app:layout_constraintTop_toBottomOf="@+id/login_password_edit" />
 
         <TextView
             android:id="@+id/dont_have_account_text"
@@ -151,7 +161,7 @@
             app:layout_constraintEnd_toStartOf="@+id/create_account_clickable_text"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider4" />
+            app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
         <TextView
             android:id="@+id/create_account_clickable_text"
@@ -164,22 +174,11 @@
             android:minHeight="48dp"
             android:text="@string/create_new_account"
             android:textAlignment="center"
+            android:textAppearance="@style/clickable_text"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.5"
             app:layout_constraintStart_toEndOf="@+id/dont_have_account_text"
-            app:layout_constraintTop_toBottomOf="@+id/divider4" />
-
-        <View
-            android:id="@+id/divider4"
-            android:layout_width="407dp"
-            android:layout_height="1dp"
-            android:layout_marginBottom="120dp"
-            android:background="?android:attr/listDivider"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/divider3"
-            app:layout_constraintVertical_bias="0.384" />
+            app:layout_constraintTop_toBottomOf="@+id/login_button" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
