fix: use username to login

--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -74,8 +74,8 @@
             android:drawableStart="@drawable/ic_email"
             android:drawablePadding="12dp"
             android:ems="10"
-            android:hint="@string/prompt_email"
-            android:inputType="textEmailAddress"
+            android:hint="@string/username"
+            android:inputType="textPersonName"
             android:minWidth="48dp"
             android:minHeight="48dp"
             android:padding="8dp"
