--- a/app/src/main/res/layout/fragment_seller_registration.xml
+++ b/app/src/main/res/layout/fragment_seller_registration.xml
@@ -28,11 +28,11 @@
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:text="@string/email"
-                app:layout_constraintBottom_toTopOf="@+id/editTextTextPersonName2"
-                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName2" />
+                app:layout_constraintBottom_toTopOf="@+id/seller_email_input"
+                app:layout_constraintStart_toStartOf="@+id/seller_email_input" />
 
             <Button
-                android:id="@+id/upload_oku_cert_button"
+                android:id="@+id/seller_upload_cert_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -42,11 +42,11 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword2"
+                app:layout_constraintTop_toBottomOf="@+id/seller_password_retype_input"
                 app:layout_constraintWidth_percent="0.5" />
 
             <EditText
-                android:id="@+id/editTextTextPassword"
+                android:id="@+id/seller_password_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -59,15 +59,15 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName2" />
+                app:layout_constraintTop_toBottomOf="@+id/seller_email_input" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/oku_cert"
-                app:layout_constraintBottom_toTopOf="@+id/upload_oku_cert_button"
-                app:layout_constraintStart_toStartOf="@+id/upload_oku_cert_button" />
+                app:layout_constraintBottom_toTopOf="@+id/seller_upload_cert_button"
+                app:layout_constraintStart_toStartOf="@+id/seller_upload_cert_button" />
 
             <TextView
                 android:id="@+id/textView"
@@ -75,11 +75,11 @@
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:text="@string/username"
-                app:layout_constraintStart_toStartOf="@+id/editTextTextPersonName"
+                app:layout_constraintStart_toStartOf="@+id/seller_username_input"
                 app:layout_constraintTop_toTopOf="parent" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName2"
+                android:id="@+id/seller_email_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -93,10 +93,10 @@
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPersonName" />
+                app:layout_constraintTop_toBottomOf="@+id/seller_username_input" />
 
             <EditText
-                android:id="@+id/editTextTextPassword2"
+                android:id="@+id/seller_password_retype_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
@@ -109,10 +109,10 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />
+                app:layout_constraintTop_toBottomOf="@+id/seller_password_input" />
 
             <EditText
-                android:id="@+id/editTextTextPersonName"
+                android:id="@+id/seller_username_input"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:background="@drawable/custom_input"
@@ -132,8 +132,8 @@
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:text="@string/prompt_password"
-                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword"
-                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword" />
+                app:layout_constraintBottom_toTopOf="@+id/seller_password_input"
+                app:layout_constraintStart_toStartOf="@+id/seller_password_input" />
 
             <TextView
                 android:id="@+id/textView4"
@@ -141,8 +141,8 @@
                 android:layout_height="wrap_content"
                 android:minWidth="48dp"
                 android:text="@string/retype_password"
-                app:layout_constraintBottom_toTopOf="@+id/editTextTextPassword2"
-                app:layout_constraintStart_toStartOf="@+id/editTextTextPassword2" />
+                app:layout_constraintBottom_toTopOf="@+id/seller_password_retype_input"
+                app:layout_constraintStart_toStartOf="@+id/seller_password_retype_input" />
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
