--- a/app/src/main/res/layout/fragment_seller_registration.xml
+++ b/app/src/main/res/layout/fragment_seller_registration.xml
@@ -36,9 +36,9 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="20dp"
+                android:background="@drawable/custom_input"
                 android:text="@string/upload_file"
                 android:textAlignment="textStart"
-                android:background="@drawable/custom_input"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -56,6 +56,8 @@
                 android:inputType="textPassword"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -89,6 +91,8 @@
                 android:inputType="textPersonName"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toEndOf="@+id/textView3"
@@ -106,6 +110,8 @@
                 android:inputType="textPassword"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
@@ -121,6 +127,8 @@
                 android:inputType="textPersonName"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
+                android:paddingLeft="5dp"
+                android:paddingRight="5dp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.5"
                 app:layout_constraintStart_toStartOf="parent"
