--- a/app/src/main/res/layout/fragment_buyer_registration.xml
+++ b/app/src/main/res/layout/fragment_buyer_registration.xml
@@ -29,6 +29,7 @@
                 android:drawableEnd="@drawable/ic_calendar"
                 android:ems="10"
                 android:hint="@string/birth_date_sample"
+                android:focusable="false"
                 android:inputType="date"
                 android:minWidth="48dp"
                 android:minHeight="48dp"
@@ -187,6 +188,7 @@
                 android:text="@string/retype_password"
                 app:layout_constraintBottom_toTopOf="@+id/buyer_password_retype_input"
                 app:layout_constraintStart_toStartOf="@+id/buyer_password_retype_input" />
+
         </androidx.constraintlayout.widget.ConstraintLayout>
     </ScrollView>
 
